--- a/Project4.html
+++ b/Project4.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+  	<meta name="keywords" 
+         content="Hà Nội Việt Nam Hồ Gươm Hồ Hoàn Kiếm">
+
+	<meta name="description" 
+         content="Websites giới thiệu về những địa điểm du lịch thu hút ở Hà Nội">
+	  
 	<link rel="stylesheet" type="text/css" href="Project4.css">
-    <title>Cậu Nhỏ ở Hà Nội này</title>
+    <title>Cậu Nhỏ ở Hà Nội</title>
 
     <!-- Bootstrap -->
     	<!-- Latest compiled and minified CSS -->
