Update SEO details
Update the explanation

--- a/Project4.html
+++ b/Project4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	
   	<meta name="keywords" 
-         content="Hà Nội Việt Nam Hồ Gươm Hồ Hoàn Kiếm">
+         content="Hà Nội Việt Nam Hồ Gươm Hồ Hoàn Kiếm Sài Gòn Tự Sự Blog Cá Nhân Nhà Thờ Đức Bà Khu Hoa Kiều Bưu Điện Trung Tâm Sài Gòn Thư Viện Tổng Hợp Chợ Bàn Cờ Bảo Tàng Phụ Nữ Nam Bộ Phố Đi Bộ Nguyễn Huệ Bảo Tàng Áo Dài Phố Tây Bùi Viện Văn Miếu Quốc Tử Giám Hồ Tây Nhà Thờ Lớn Hà Nội Chùa Một Cột Thư Viện Quốc Gia Chùa Một Cột Hoàng Thành Thăng Long Phố Cổ Hà Nội Nhà Tù Hỏa Lò ">
 
 	<meta name="description" 
          content="Websites giới thiệu về những địa điểm du lịch thu hút ở Hà Nội">
@@ -31,8 +31,8 @@
 	
   <body>
 <!--	  Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-       <a class="navbar-brand" href="../Final Project/Project4.html" alt="Cậu Nhỏ ở Hà Nội">Cậu Nhỏ ở Hà Nội</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
+       <a class="navbar-brand" href="https://dminhphan.github.io/Project4#H2-Hanoi" alt="Cậu Nhỏ ở Hà Nội">Cậu Nhỏ ở Hà Nội</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
        </button>
@@ -90,7 +90,7 @@
 	
 	
 	  <!--1st Banner Section-->
-    <section class="video-background-banner text-center">
+    <section class="video-background-banner text-center" id="banner">
 
 <!--
        <div class="video-background">
@@ -380,7 +380,7 @@
              					<div class="card">
                 					<a href="https://www.flickr.com/photos/dgmckelvey/9777010352/"><img class="card-img-top img-fluid rounded" src="images/HoTay.jpg" alt="Hồ Tây"></a>
                 					<div class="card-body">
-                   						<h4 class="card-title">Nhà Thờ Đức Bà</h4>
+                   						<h4 class="card-title">Hồ Tây</h4>
                    						<p class="card-text">Hồ Tây trước đây còn có các tên gọi khác như Đầm Xác Cáo, Hồ Kim Ngưu, Lãng Bạc, Dâm Đàm, Đoài Hồ, là một hồ nước tự nhiên lớn nhất ở nội thành thủ đô Hà Nội, nằm ở quận Tây Hồ.</p>
                    						<br><br>
                    						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
@@ -533,9 +533,9 @@
 				   		<li>dminhphan96@gmail.com</li>
 				   		<li>+84 (0) 906 634 094</li>
 					</ul>
-                   <button type="button" class="btn btn-info btn-md">Nhắn Zalo cho tôi</button>
+                   <button type="button" class="btn btn-info btn-md">Nhắn Zalo cho mình</button>
 					<br>
-                   <button type="button" class="btn btn-success btn-md">Nhắn WhatsApp cho tôi</button>
+                   <button type="button" class="btn btn-success btn-md">Nhắn WhatsApp cho mình</button>
 					<br>
                    <button type="button" class="btn btn-primary btn-md">Gửi thư cho mình</button>
                 </div>
@@ -555,7 +555,7 @@
 	  <div class="row jumbotron jumbotron-fluid">
           <div class="text-center col-lg-12 col-md-12 col-sm-12 col-12">
              <h4>Cậu Nhỏ ở Hà Nội </h4>
-             <p>Copyright &copy; 2021 &middot; All Rights Reserved &middot; <a href="#banner-text" alt="Cậu Nhỏ ở Sài Gòn">Lên Đầu Trang</a></p>
+             <p>Copyright &copy; 2021 &middot; All Rights Reserved &middot; <a href="#banner" alt="Cậu Nhỏ ở Sài Gòn">Lên Đầu Trang</a></p>
           </div>
        </div>
     	</div>	 
