Google Analytics Adding
Adding Analytics Script to HTML

--- a/Project4.html
+++ b/Project4.html
@@ -9,7 +9,11 @@
          content="Hà Nội Việt Nam Hồ Gươm Hồ Hoàn Kiếm Sài Gòn Tự Sự Blog Cá Nhân Nhà Thờ Đức Bà Khu Hoa Kiều Bưu Điện Trung Tâm Sài Gòn Thư Viện Tổng Hợp Chợ Bàn Cờ Bảo Tàng Phụ Nữ Nam Bộ Phố Đi Bộ Nguyễn Huệ Bảo Tàng Áo Dài Phố Tây Bùi Viện Văn Miếu Quốc Tử Giám Hồ Tây Nhà Thờ Lớn Hà Nội Chùa Một Cột Thư Viện Quốc Gia Chùa Một Cột Hoàng Thành Thăng Long Phố Cổ Hà Nội Nhà Tù Hỏa Lò ">
 
 	<meta name="description" 
-         content="Websites giới thiệu về những địa điểm du lịch thu hút ở Hà Nội">
+         content="Blog tự sự bản thân giới thiệu về những địa điểm du lịch thu hút ở Hà Nội thông qua con mắt của một người cậu nhỏ Sài Gòn">
+	  
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5FP5LZR');</script>
+<!-- End Google Tag Manager -->
 	  
 	<link rel="stylesheet" type="text/css" href="Project4.css">
     <title>Cậu Nhỏ ở Hà Nội</title>
@@ -30,6 +34,10 @@
   </head>
 	
   <body>
+	  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5FP5LZR" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	  
 <!--	  Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
        <a class="navbar-brand" href="https://dminhphan.github.io/Project4#H2-Hanoi" alt="Cậu Nhỏ ở Hà Nội">Cậu Nhỏ ở Hà Nội</a>
