--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          content="Hà Nội Việt Nam Hồ Gươm Hồ Hoàn Kiếm Sài Gòn Tự Sự Blog Cá Nhân Nhà Thờ Đức Bà Khu Hoa Kiều Bưu Điện Trung Tâm Sài Gòn Thư Viện Tổng Hợp Chợ Bàn Cờ Bảo Tàng Phụ Nữ Nam Bộ Phố Đi Bộ Nguyễn Huệ Bảo Tàng Áo Dài Phố Tây Bùi Viện Văn Miếu Quốc Tử Giám Hồ Tây Nhà Thờ Lớn Hà Nội Chùa Một Cột Thư Viện Quốc Gia Chùa Một Cột Hoàng Thành Thăng Long Phố Cổ Hà Nội Nhà Tù Hỏa Lò ">
 
 	<meta name="description" 
-         content="Blog tự sự bản thân giới thiệu về những địa điểm du lịch thu hút ở Hà Nội thông qua con mắt của một người cậu nhỏ Sài Gòn">
+         content="Blog tự sự bản thân và giới thiệu về những địa điểm ở Hà Nội qua con mắt của một cậu nhỏ Sài Gòn thích ở nhà một mình nhưng hay lang thang đây đó">
 	  
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NZGJS5J');</script>
