--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
                    <a class="dropdown-item" href="#">Nghiên Cứu Khoa Học</a>
                    <a class="dropdown-item" href="#">Thiết Kế</a>
-                   <a class="dropdown-item" href="#">Video</a>
+                   <a class="dropdown-item" href="#">Giáo Dục</a>
 					<a class="dropdown-item" href="#">Lập Trình</a>
                 </div>
              </li>
@@ -125,7 +125,7 @@
        <br>
 	   <div class="row text-center">
           <br>
-		   <div id="Self-Intro" class="col-lg-12"><strong><em>Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. Vẫn đang học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu hữu duyên.</em></strong></div>
+		   <div id="Self-Intro" class="col-lg-12"><strong><em>Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. Vẫn đang học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu hữu duyên. Và vẫn phải học đi học lại nếu học mà cứ trả chữ lại cho cuộc đợi.</em></strong></div>
        </div>
 		
        <br>
@@ -436,7 +436,7 @@
       <br>
 		
 		<!--Blog Section-->
-			<h2 class="display-12 text-center">Sổ Nhỏ của Cậu Nhỏ</h2>
+			<h2 class="display-12 text-center">Sổ Tay của Cậu Nhỏ</h2>
       		<p class="lead text-center"><em>Những vu vơ thoáng qua từ một cậu nhỏ trong thân xác người lớn</em></p>
 	   		
 	   <br>
@@ -535,9 +535,9 @@
           <div class="col-lg-4 col-md-4 col-sm-12 col-12 text-center">			  
              <div class="card">
                 <div class="card-body">
-                   <h3>Hà Nội</h3>
+                   <h3>Thông Tin Cánh Cửa</h3>
                    <ul class="list-unstyled">
-						<li>Quận Đống Đa</li>
+						<li>Hiện vẫn ở Việt Nam</li>
 				   		<li>dminhphan96@gmail.com</li>
 				   		<li>+84 (0) 906 634 094</li>
 					</ul>
