Index update + Thailand
Index update + Thailand

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	
 	
 	  <!--1st Banner Section-->
-    <section class="video-background-banner text-center" id="banner">
+    <section class="video-background-banner text-center" id="top">
 
 <!--
        <div class="video-background">
@@ -563,7 +563,7 @@
 	  <div class="row jumbotron jumbotron-fluid">
           <div class="text-center col-lg-12 col-md-12 col-sm-12 col-12">
              <h4>Cậu Nhỏ ở Hà Nội </h4>
-             <p>Copyright &copy; 2021 &middot; All Rights Reserved &middot; <a href="#banner" alt="Cậu Nhỏ ở Sài Gòn">Lên Đầu Trang</a></p>
+             <p>Copyright &copy; 2021 &middot; All Rights Reserved &middot; <a href="#top" alt="Cậu Nhỏ ở Sài Gòn">Lên Đầu Trang</a></p>
           </div>
        </div>
     	</div>	 
