--- a/Myanmar.html
+++ b/Myanmar.html
@@ -239,9 +239,9 @@
              <div class="card">
                 <div class="card-body-switching">
                    <h4><em>Bài Trước</em></h4>
-					<h3><strong>Đi gõ đầu trẻ ở Trường Đồi có gì vui vậy?</strong></h3>
+					<h3><strong>Pathom Asoke - Một Cộng Đồng Tỉnh Thức</strong></h3>
 					
-                   <p class="text-justify">Một cái trải nghiệm nho nhỏ khi đi dạy ở Trường Đồi, cách Hà Nội 40km về phía Tây, một mô hình giáo dục kiểu mới, mình từng hy vọng nhiều, thất vọng cũng chẳng ít, nhưng rồi mọi chuyện cũng qua đi, chỉ còn tình thầy trò ở lại, và mình trân trọng thời gian mình ở tại trường, đó là điều quan trọng nhất. Mong sau này có một ngọn đồi nho nhỏ để dắt trẻ lên cho khám phá cây cỏ cho cái tuổi thơ nó đủ đầy. </p>
+                   <p class="text-justify">Cách Bangkok 70km, eẽ ít người biết đến Nakhon Pathom khi đi du lịch Thái Lan, và cơ duyên mình biết đến nơi này cũng chỉ từ một đoạn hội thoại ngắn với thằng bạn rằng mình muốn đi tình nguyện ở Thái Lan, nhưng mà phải là nông thôn Thái Lan nơi chưa bị Công nghiệp hóa. Và, mình đến đây, với mình, Pathom Asoke cho mình nhiều hơn chỉ là một nơi mình đến để phụ giúp họ công việc và học tập.</p>
                    <a href="#"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
                 </div>
              </div>
@@ -250,9 +250,9 @@
              <div class="card">
                 <div class="card-body-switching">
                    <h4><em>Bài Sau</em></h4>
-					<h3><strong>Làm Y Tá ở Bệnh Viện Miễn Phí ở Thabarwa</strong></h3>
+					<h3><strong>Đến Bồ Đề Đạo Tràng mà chẳng sùng đạo!</strong></h3>
 					
-                   <p class="text-justify">Mình có thằng bạn ngày xưa đi tình nguyện ở Nepal thì gặp được nhiều bạn bè quốc tế, và được giới thiệu về một cộng đồng tên là ThaBarWa ở Miến Điện! Mình đến đây làm việc trong bệnh viện ở đây chủ yếu là chăm sóc bệnh nhân vào buổi sáng và phụ nấu ăn buổi tối nhưng hiểu hơn về công tác vận hành của các khóa thiền miễn phí nổi tiếng với đa phần người Việt tốn nhiều mồ hôi và công sức thế nào. </p>
+                   <p class="text-justify">Lượn một vòng Bồ Đề Đạo Tràng ở Bodh Gaya vẫn nghe loáng thoáng nghe được tiếng Việt từ các đoàn hành hương. Tuy nhiên, mình chẳng có một chút Đức tin nào lúc đó, trở lại Bodh Gaya sau 2 tháng rong ruổi khắp từ mạn Đông sang mạn Tây Ấn Độ chỉ vì quá mê cô Phương Mai và chị Huyền Chip cùng những chuyến đi. Hai tháng cuối cùng ở Ấn Độ thật ý nghĩa vì được các nữ tu ở Jamyang Foundation bảo bọc.</p>
                    <a href="#"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
                 </div>
              </div>
