Update Style for Blogs content
adding class

--- a/India.html
+++ b/India.html
@@ -237,22 +237,22 @@
        <div class="row">
           <div class="col-md-6 text-center col-lg-6 col-sm-12 col-12">
              <div class="card">
-                <div class="card-body-switching">
+                <div class="card-body-switching card-body">
                    <h4><em>Bài Trước</em></h4>
-					<h3><strong>Làm Y Tá ở Bệnh Viện Miễn Phí ở Thabarwa</strong></h3>
+					<h3 class="card-title"><strong>Làm Y Tá ở Bệnh Viện Miễn Phí ở Thabarwa</strong></h3>
 					
-                   <p class="text-justify">Mình có thằng bạn ngày xưa đi tình nguyện ở Nepal thì gặp được nhiều bạn bè quốc tế, và được giới thiệu về một cộng đồng tên là ThaBarWa ở Miến Điện! Mình đến đây làm việc trong bệnh viện ở đây chủ yếu là chăm sóc bệnh nhân vào buổi sáng và phụ nấu ăn buổi tối nhưng hiểu hơn về công tác vận hành của các khóa thiền miễn phí nổi tiếng với đa phần người Việt tốn nhiều mồ hôi và công sức thế nào.</p>
+                   <p class="text-justify card-text">Mình có thằng bạn ngày xưa đi tình nguyện ở Nepal thì gặp được nhiều bạn bè quốc tế, và được giới thiệu về một cộng đồng tên là ThaBarWa ở Miến Điện! Mình đến đây làm việc trong bệnh viện ở đây chủ yếu là chăm sóc bệnh nhân vào buổi sáng và phụ nấu ăn buổi tối nhưng hiểu hơn về công tác vận hành của các khóa thiền miễn phí nổi tiếng với đa phần người Việt tốn nhiều mồ hôi và công sức thế nào.</p>
                    <a href="#"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
                 </div>
              </div>
           </div>
           <div class="text-center col-md-6 col-lg-6 col-sm-12 col-12">
              <div class="card">
-                <div class="card-body-switching">
+                <div class="card-body-switching card-body">
                    <h4><em>Bài Sau</em></h4>
-					<h3><strong>Đi gõ đầu trẻ ở Trường Đồi có gì vui vậy?</strong></h3>
+					<h3 class="card-title"><strong>Đi gõ đầu trẻ ở Trường Đồi có gì vui vậy?</strong></h3>
 					
-                   <p class="text-justify">Một cái trải nghiệm nho nhỏ khi đi dạy ở Trường Đồi, cách Hà Nội 40km về phía Tây, một mô hình giáo dục kiểu mới, mình từng hy vọng nhiều, thất vọng cũng chẳng ít, nhưng rồi mọi chuyện cũng qua đi, chỉ còn tình thầy trò ở lại, và mình trân trọng thời gian mình ở tại trường, đó là điều quan trọng nhất. Mong sau này có một ngọn đồi nho nhỏ để dắt trẻ lên cho khám phá cây cỏ cho cái tuổi thơ nó đủ đầy. </p>
+                   <p class="text-justify card-text">Một cái trải nghiệm nho nhỏ khi đi dạy ở Trường Đồi, cách Hà Nội 40km về phía Tây, một mô hình giáo dục kiểu mới, mình từng hy vọng nhiều, thất vọng cũng chẳng ít, nhưng rồi mọi chuyện cũng qua đi, chỉ còn tình thầy trò ở lại, và mình trân trọng thời gian mình ở tại trường, đó là điều quan trọng nhất. Mong sau này có một ngọn đồi nho nhỏ để dắt trẻ lên cho khám phá cây cỏ cho cái tuổi thơ nó đủ đầy. </p>
                    <a href="#"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
                 </div>
              </div>
