--- a/Myanmar.html
+++ b/Myanmar.html
@@ -237,9 +237,9 @@
        <div class="row">
           <div class="col-md-6 text-center col-lg-6 col-sm-12 col-12">
              <div class="card">
-                <div class="card-body-switching">
+                <div class="card-body-switching card-body">
                    <h4><em>Bài Trước</em></h4>
-					<h3><strong>Pathom Asoke - Một Cộng Đồng Tỉnh Thức</strong></h3>
+					<h3 class="card-title"><strong>Pathom Asoke - Một Cộng Đồng Tỉnh Thức</strong></h3>
 					
                    <p class="text-justify">Cách Bangkok 70km, eẽ ít người biết đến Nakhon Pathom khi đi du lịch Thái Lan, và cơ duyên mình biết đến nơi này cũng chỉ từ một đoạn hội thoại ngắn với thằng bạn rằng mình muốn đi tình nguyện ở Thái Lan, nhưng mà phải là nông thôn Thái Lan nơi chưa bị Công nghiệp hóa. Và, mình đến đây, với mình, Pathom Asoke cho mình nhiều hơn chỉ là một nơi mình đến để phụ giúp họ công việc và học tập.</p>
                    <a href="#"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
@@ -248,11 +248,11 @@
           </div>
           <div class="text-center col-md-6 col-lg-6 col-sm-12 col-12">
              <div class="card">
-                <div class="card-body-switching">
+                <div class="card-body-switching card-body">
                    <h4><em>Bài Sau</em></h4>
-					<h3><strong>Đến Bồ Đề Đạo Tràng mà chẳng sùng đạo!</strong></h3>
+					<h3 class="card-title"><strong>Đến Bồ Đề Đạo Tràng mà chẳng sùng đạo!</strong></h3>
 					
-                   <p class="text-justify">Lượn một vòng Bồ Đề Đạo Tràng ở Bodh Gaya vẫn nghe loáng thoáng nghe được tiếng Việt từ các đoàn hành hương. Tuy nhiên, mình chẳng có một chút Đức tin nào lúc đó, trở lại Bodh Gaya sau 2 tháng rong ruổi khắp từ mạn Đông sang mạn Tây Ấn Độ chỉ vì quá mê cô Phương Mai và chị Huyền Chip cùng những chuyến đi. Hai tháng cuối cùng ở Ấn Độ thật ý nghĩa vì được các nữ tu ở Jamyang Foundation bảo bọc.</p>
+                   <p class="text-justify card-text">Lượn một vòng Bồ Đề Đạo Tràng ở Bodh Gaya vẫn nghe loáng thoáng nghe được tiếng Việt từ các đoàn hành hương. Tuy nhiên, mình chẳng có một chút Đức tin nào lúc đó, trở lại Bodh Gaya sau 2 tháng rong ruổi khắp từ mạn Đông sang mạn Tây Ấn Độ chỉ vì quá mê cô Phương Mai và chị Huyền Chip cùng những chuyến đi. Hai tháng cuối cùng ở Ấn Độ thật ý nghĩa vì được các nữ tu ở Jamyang Foundation bảo bọc.</p>
                    <a href="#"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
                 </div>
              </div>
