--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     					<div class="carousel-item">
       						<div class="row carousel-blog">
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<h4 class="card-title">Đến Bồ Đề Đạo Tràng mà chẳng có chút sùng đạo nào!</h4>
+									<h4 class="card-title">Đến Bồ Đề Đạo Tràng mà chẳng sùng đạo!</h4>
 									<p class="card-text">Lượn một vòng Bồ Đề Đạo Tràng ở Bodh Gaya vẫn nghe loáng thoáng nghe được tiếng Việt từ các đoàn hành hương. Tuy nhiên, mình chẳng có một chút Đức tin nào lúc đó, trở lại Bodh Gaya sau 2 tháng rong ruổi khắp từ mạn Đông sang mạn Tây Ấn Độ chỉ vì quá mê cô Phương Mai và chị Huyền Chip cùng những chuyến đi. Hai tháng cuối cùng ở Ấn Độ thật ý nghĩa và được các nữ tu ở Jamyang Foundation bảo bọc.</p>
 									<br><br>
 									<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
