--- a/India.html
+++ b/India.html
@@ -110,7 +110,7 @@
        <div class="row">
 <!--          Left Section-->
 		   <div class=" col-lg-8 col-md-8 col-sm-12 col-12"> 
-			  <h2 class="text-center">Teaching to Believe in India</h2>
+			  <h2 class="text-center">Teach to Believe in India</h2>
 			   <br>
 			   <h5 class="text-justify"><em>After having a squabble with the manager at Taurian World School in Ranchi, Jharkhand, I decided it's time to leave the school. In brief, I had no idea why I was staying there and what I was fighting for, am I here for my learners' sake? Keeping staying there is a bad idea since I could not answer all of my questions. When I was working for AIESEC in Vietnam, I was already experienced the "sluggish Indian", as I said, they were considered to be unproductive and inefficient at work, or anything in their lives. Indeed, it's time to leave, I told myself.</em></h5>
 			   <br>
