Update hyperlink to other blogs
nav bar btn link update

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 					Đôi Giày<span class="sr-only">(current)</span>
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                   <a class="dropdown-item" href="#">Thái Lan</a>
-                   <a class="dropdown-item" href="#">Miến Điện</a>
-					<a class="dropdown-item" href="#">Ấn Độ</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thái Lan</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Myanmar">Miến Điện</a>
+					<a class="dropdown-item" href="https://dminhphan.github.io/India">Ấn Độ</a>
                    <div class="dropdown-divider"></div>
-                   <a class="dropdown-item" href="#">Việt Nam</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Vietnam">Việt Nam</a>
                 </div>
              </li>
 <!--			 My Work-->
@@ -457,7 +457,7 @@
 									<h4 class="card-title">Đi gõ đầu trẻ ở Trường Đồi có gì vui vậy?</h4>
 									<p class="card-text text-justify">Một cái trải nghiệm nho nhỏ khi đi dạy ở Trường Đồi, cách Hà Nội 40km về phía Tây, một mô hình giáo dục kiểu mới, mình từng hy vọng nhiều, thất vọng cũng chẳng ít, nhưng rồi mọi chuyện cũng qua đi, chỉ còn tình thầy trò ở lại, và mình trân trọng thời gian mình ở tại trường, đó là điều quan trọng nhất. Mong sau này có một ngọn đồi nho nhỏ để dắt trẻ lên cho khám phá cây cỏ cho cái tuổi thơ nó đủ đầy.</p>
 									<br><br>
-									<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+									<a href="https://dminhphan.github.io/Vietnam" class="btn btn-info">Tìm Hiểu thêm</a>
 								</div>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
 									<iframe src="https://www.youtube.com/embed/XOo1ogi7dGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height=100% autoplay=1 loop=1></iframe>
@@ -473,7 +473,7 @@
 									<h4 class="card-title">Pathom Asoke - Một Cộng Đồng Tỉnh Thức</h4>
 									<p class="card-text">Cách Bangkok 70km, sẽ ít người biết đến Nakhon Pathom khi đi du lịch Thái Lan, và cơ duyên mình biết đến nơi này cũng chỉ từ một đoạn hội thoại ngắn với thằng bạn rằng mình muốn đi tình nguyện ở Thái Lan, nhưng mà phải là nông thôn Thái Lan nơi chưa bị Công nghiệp hóa. Và, mình đến đây, với mình, Pathom Asoke cho mình nhiều hơn chỉ là một nơi mình đến để phụ giúp họ công việc và học tập.</p>
 									<br><br>
-									<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+									<a href="https://dminhphan.github.io/Thailand" class="btn btn-info">Tìm Hiểu thêm</a>
 								</div>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
 									<iframe width=100% height=100% src="https://www.youtube.com/embed/gkXaPZKsREQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
@@ -489,7 +489,7 @@
 									<h4 class="card-title">Đến Bồ Đề Đạo Tràng mà chẳng sùng đạo!</h4>
 									<p class="card-text">Lượn một vòng Bồ Đề Đạo Tràng ở Bodh Gaya vẫn nghe loáng thoáng nghe được tiếng Việt từ các đoàn hành hương. Tuy nhiên, mình chẳng có một chút Đức tin nào lúc đó, trở lại Bodh Gaya sau 2 tháng rong ruổi khắp từ mạn Đông sang mạn Tây Ấn Độ chỉ vì quá mê cô Phương Mai và chị Huyền Chip cùng những chuyến đi. Hai tháng cuối cùng ở Ấn Độ thật ý nghĩa và được các nữ tu ở Jamyang Foundation bảo bọc.</p>
 									<br><br>
-									<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+									<a href="https://dminhphan.github.io/India" class="btn btn-info">Tìm Hiểu thêm</a>
 								</div>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
 									<iframe width=100% height=100% src="https://www.youtube.com/embed/kJtGNZlvKUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
