--- a/Thailand.html
+++ b/Thailand.html
@@ -47,11 +47,11 @@
 					Đôi Giày<span class="sr-only">(current)</span>
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                   <a class="dropdown-item" href="#">Thái Lan</a>
-                   <a class="dropdown-item" href="#">Miến Điện</a>
-					<a class="dropdown-item" href="#">Ấn Độ</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thái Lan</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Myanmar">Miến Điện</a>
+					<a class="dropdown-item" href="https://dminhphan.github.io/India">Ấn Độ</a>
                    <div class="dropdown-divider"></div>
-                   <a class="dropdown-item" href="#">Việt Nam</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Vietnam">Việt Nam</a>
                 </div>
              </li>
 <!--			 My Work-->
@@ -242,7 +242,7 @@
 					<h3 class="card-title"><strong>Đi gõ đầu trẻ ở Trường Đồi có gì vui vậy?</strong></h3>
 					
                    <p class="text-justify card-text">Một cái trải nghiệm nho nhỏ khi đi dạy ở Trường Đồi, cách Hà Nội 40km về phía Tây, một mô hình giáo dục kiểu mới, mình từng hy vọng nhiều, thất vọng cũng chẳng ít, nhưng rồi mọi chuyện cũng qua đi, chỉ còn tình thầy trò ở lại, và mình trân trọng thời gian mình ở tại trường, đó là điều quan trọng nhất. Mong sau này có một ngọn đồi nho nhỏ để dắt trẻ lên cho khám phá cây cỏ cho cái tuổi thơ nó đủ đầy. </p>
-                   <a href="#"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
+                   <a href="https://dminhphan.github.io/Vietnam"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
                 </div>
              </div>
           </div>
@@ -253,7 +253,7 @@
 					<h3 class="card-title"><strong>Làm Y Tá ở Bệnh Viện Miễn Phí ở Thabarwa</strong></h3>
 					
                    <p class="text-justify card-text">Mình có thằng bạn ngày xưa đi tình nguyện ở Nepal thì gặp được nhiều bạn bè quốc tế, và được giới thiệu về một cộng đồng tên là ThaBarWa ở Miến Điện! Mình đến đây làm việc trong bệnh viện ở đây chủ yếu là chăm sóc bệnh nhân vào buổi sáng và phụ nấu ăn buổi tối nhưng hiểu hơn về công tác vận hành của các khóa thiền miễn phí nổi tiếng với đa phần người Việt tốn nhiều mồ hôi và công sức thế nào. </p>
-                   <a href="#"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
+                   <a href="https://dminhphan.github.io/Myanmar"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
                 </div>
              </div>
           </div>
