--- a/Vietnam.html
+++ b/Vietnam.html
@@ -47,11 +47,11 @@
 					Đôi Giày<span class="sr-only">(current)</span>
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                   <a class="dropdown-item" href="#">Thái Lan</a>
-                   <a class="dropdown-item" href="#">Miến Điện</a>
-					<a class="dropdown-item" href="#">Ấn Độ</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thái Lan</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Myanmar">Miến Điện</a>
+					<a class="dropdown-item" href="https://dminhphan.github.io/India">Ấn Độ</a>
                    <div class="dropdown-divider"></div>
-                   <a class="dropdown-item" href="#">Việt Nam</a>
+                   <a class="dropdown-item" href="https://dminhphan.github.io/Vietnam">Việt Nam</a>
                 </div>
              </li>
 <!--			 My Work-->
@@ -242,7 +242,7 @@
 					<h3 class="card-title"><strong>Đến Bồ Đề Đạo Tràng mà chẳng sùng đạo!</strong></h3>
 					
                    <p class="text-justify card-text">Lượn một vòng Bồ Đề Đạo Tràng ở Bodh Gaya vẫn nghe loáng thoáng nghe được tiếng Việt từ các đoàn hành hương. Tuy nhiên, mình chẳng có một chút Đức tin nào lúc đó, trở lại Bodh Gaya sau 2 tháng rong ruổi khắp từ mạn Đông sang mạn Tây Ấn Độ chỉ vì quá mê cô Phương Mai và chị Huyền Chip cùng những chuyến đi. Hai tháng cuối cùng ở Ấn Độ thật ý nghĩa vì được các nữ tu ở Jamyang Foundation bảo bọc. </p>
-                   <a href="#"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
+                   <a href="https://dminhphan.github.io/India"><button type="button" class="btn btn-info btn-md">Đến Bài Trước</button></a>                   
                 </div>
              </div>
           </div>
@@ -253,7 +253,7 @@
 					<h3 class="card-title"><strong>Pathom Asoke - Một Cộng Đồng Tỉnh Thức</strong></h3>
 					
                    <p class="text-justify card-text">Cách Bangkok 70km, eẽ ít người biết đến Nakhon Pathom khi đi du lịch Thái Lan, và cơ duyên mình biết đến nơi này cũng chỉ từ một đoạn hội thoại ngắn với thằng bạn rằng mình muốn đi tình nguyện ở Thái Lan, nhưng mà phải là nông thôn Thái Lan nơi chưa bị Công nghiệp hóa. Và, mình đến đây, với mình, Pathom Asoke cho mình nhiều hơn chỉ là một nơi mình đến để phụ giúp họ công việc và học tập. </p>
-                   <a href="#"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
+                   <a href="https://dminhphan.github.io/Thailand"><button type="button" class="btn btn-success btn-md">Đến Bài Sau</button></a>
                 </div>
              </div>
           </div>
