--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	  
 	<link rel="stylesheet" type="text/css" href="Project4.css">
     <title>Cậu Nhỏ ở Hà Nội</title>
+	  <link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png"/>
 
     <!-- Bootstrap -->
     	<!-- Latest compiled and minified CSS -->
