--- a/Thailand.html
+++ b/Thailand.html
@@ -26,13 +26,19 @@
     	<!-- Latest compiled JavaScript -->
     	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap URL-->
+    <!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-KX6KGVD');</script>
+	<!-- End Google Tag Manager -->
 
   	<style type="text/css">
   		@import url("Project4.css");
   	</style>
   </head>
   <body>
+	  
+	  <!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX6KGVD"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
     
 	  <!--	  Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
