Update the Vietnam html

--- a/India.html
+++ b/India.html
@@ -105,7 +105,7 @@
 		<div id="banner-text">
 			<h1 class="display-4">Coming To Bodh Gaya Without Any Religious Believe</h1>
        		<p class="lead text-center">
-				Because I will volunteer at Sanghamitra Institute of Jamyang Foundation!
+				Because I don't need to have that to serve the community when I was doing my volunteer work at Sanghamitra Institute of Jamyang Foundation!
 			</p>
 		</div>
 		
@@ -152,7 +152,7 @@
 <!--          Right Section-->
 		   <div class="col-lg-4 col-md-4 col-sm-12 col-12"> 
 <!--			   Youtube Video-->
-			   <iframe width=100% height="300px" src="https://www.youtube.com/embed/kJtGNZlvKUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			   <iframe width=100% height="300px" src="https://www.youtube.com/embed/kJtGNZlvKUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 			  
 			   <!-- Right Landscape Carousel  -->
 			<div class="row carousel slide" data-ride="carousel" id="carousel-India-Landscape">
