--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
 		<!--Blog Section-->
 			<h2 class="display-12 text-center">Sổ Tay của Cậu Nhỏ</h2>
-      		<p class="lead text-center"><em>Những vu vơ thoáng qua từ một cậu nhỏ trong thân xác người lớn</em></p>
+      		<p class="lead text-center"><em>Nơi góp nhặt những mảnh ký ức, mong rằng một ngày để gió cuốn đi</em></p>
 
 	   <br>
 			<!-- Blog Carousel -->
